# template-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
scratch/: README.md
