[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --junit-xml=junit.xml"
testpaths = [
    "tests",
]

[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
